Fixing pattern list to wrap when not enough room for all items
Previously caused the items to become scrunched together
when there wasn't enough room on a single line for all items
(such as in mobile).

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -59,6 +59,7 @@
 .flex-column { -webkit-flex-direction: column; flex-direction: column; }
 .flex-align-center { -webkit-align-items: center; align-items: center; }
 .flex-justify-center { -webkit-justify-content: center; justify-content: center; }
+.flex-wrap { -webkit-flex-wrap: wrap; flex-wrap: wrap; }
 
 .overflow-auto     { overflow: auto; }
 .overflow-hidden-x { overflow-x: hidden; }
